@@ -1,3 +1,7 @@
+2004-12-14  Alexander Neundorf <neundorf@kde.org>
+
+	* src/syscall-i386-linux-1.0.S:	Add ipc system call
+
 2004-08-04  Alexander Neundorf <alexander.neundorf@jenoptik.com>
 
 	* src/syscall-i386-linux-1.0.S:	Add mkdir system call
